# ppa

./: .env.pgvector.example  .gitignore  .prettierrc  Makefile  README.md  docker-compose.pgvector.yml  docker-compose.test.yml  pyproject.toml  run-arnold-mcp.sh  run-local-seed-mcp.sh  v2vision.md  v3vision.md
.slices/: README.md
archive_auth/: __init__.py  accounts.py
archive_cli/: __main__.py  batch_embedder.py  benchmark.py  card_registry.py  chunk_builders.py  chunking.py  config.py  contracts.py  crate_bridge.py  embedder.py  errors.py  explain.py  features.py  geocoder.py  iata.py  index_config.py  index_query.py  index_store.py  linker_calibration.py  linker_cli.py  linker_framework.py  loader.py  log.py  materializer.py  merchant_normalizer.py  migrate.py  ppa_engine.py  query_planner.py  retrieval_pipeline.py  scanner.py  schema_ddl.py  seed_links.py  server.py  store.py  test_slice.py  vault_cache.py
archive_crate/: Cargo.toml  materializer_registry.json  pyproject.toml  rust-toolchain.toml
archive_crate/src/: bridge.rs  cache.rs  cache_build.rs  cache_iter.rs  chunker.rs  config.rs  frontmatter.rs  fuzzy_resolver.rs  hasher.rs  json_stable.rs  lib.rs  person_index.rs  progress.rs  resolve_batch.rs  scanner.rs  validator.rs  walk.rs
archive_crate/src/chunk/: accumulator.rs  builders.rs  config.rs  constants.rs  dispatch.rs  fm.rs  helpers.rs  mod.rs
archive_crate/src/materializer/: activity.rs  batch.rs  body.rs  card_field_keys.rs  card_fields.rs  copy_buffer.rs  edges.rs  external_ids.rs  fm_value.rs  mod.rs  projection.rs  pyutil.rs  quality.rs  registry.rs  text_hash.rs  time_parse.rs
archive_docs/: ARCHIVE_SUPERPOWER_DEMO.md  CARD_TYPE_CONTRACTS.md  CONTRIBUTING_LINKERS.md  HFA_QMD_BORROWING_IMPLEMENTATION_SUMMARY.md  INDEXING.md  LINKER_ARCHITECTURE.md  MCP_SETUP.md  PLAYBOOK.md  PPA_BACKUP_AND_RESTORE.md  PPA_NAMING_CONVENTIONS.md  PPA_RUNTIME_CONTRACT.md  RETRIEVAL_CONTRACT.md  SECURITY_MODEL.md  SLICE_TESTING.md  TYPED_PROJECTION_ARCHITECTURE.md  extractor-yield-report.md  gemini-api-privacy.md  phase-2.5-summary.md  phase275-step10-model-selection.md  phase3-operational-rerun.md  phase3-performance-prediction.example.json  phase3-summary.json  phase_2_9_audit.md
archive_doctor/: SKILL.md  __init__.py  __main__.py  handler.py
archive_mcp/: __init__.py  __main__.py  benchmark.py  card_registry.py  chunk_builders.py  config.py  contracts.py  embedder.py  embedding_provider.py  errors.py  features.py  health.py  index_config.py  index_query.py  index_store.py  loader.py  log.py  materializer.py  migrate.py  query_planner.py  reranker.py  retrieval_pipeline.py  scanner.py  schema_ddl.py  seed_links.py  server.py  store.py  test_slice.py  tunnel.py  vault_cache.py
archive_scripts/: aggregate_benchmark_results.py  benchmark-archive_crate-entity-resolution.py  benchmark-archive_crate-tier1.py  benchmark-archive_crate-tier2.py  build_enrichment_benchmark.py  build_ground_truth_holdouts.py  clean-phase3-derived-dirs.sh  demo_ppa_rust_vault_cache.py  export_materializer_registry.py  generate_extraction_quality_report.py  llm_enrichment_step6b_smoke.py  ollama_llm_smoke.py  phase3_step8_verification.py  phase6_5_audit_finance_source_email.py  phase6_5_audit_timezone_consistency.py  phase6_5_backfill_timezones.py  phase6_5_build_spotcheck_packets.py  phase6_5_calibrate_1pct.py  phase6_5_calibrate_fullseed.py  phase6_apply_filter_offline.py  phase6_backfill_classifications.py  phase6_demo.py  phase6_iter_offline.py  phase6_iterate.py  phase6_multimodel_spot.py  phase6_precompute.py  phase6_run_against_seed.py  phase6_sample_for_review.py  phase6_turns.json  ppa-backup-upload-gdrive.sh  ppa-backup-upload-icloud.sh  ppa-backup.sh  ppa-calendar-extract.py  ppa-calendar-import-spool.py  ppa-embed-batch-loop.sh  ppa-github-extract-parallel.py  ppa-gmail-extract-parallel.py  ppa-gmail-extract.py  ppa-gmail-import-spool.py  ppa-gmail-stream-import.py  (+27 more)
archive_sync/: SKILL.md  __init__.py  __main__.py  adapter_contracts.py  cli_logging.py  handler.py
archive_tests/: EXTENSIBILITY_CONTRACT.md  archive_crate_projection_parity.py  conftest.py  index_snapshot.py  slice_config.10pct.json  slice_config.1pct.json  slice_config.5pct.json  (+89 more)
(+565 files in other folders)
