[build-system]
requires = ["setuptools>=61", "wheel", "maturin>=1.7"]
build-backend = "setuptools.build_meta"

[project]
name = "ppa"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "ruamel.yaml>=0.17",
  "mcp>=1.0",
  "psycopg[binary]>=3.2",
  "python-dateutil>=2.8",
  "html2text>=2024.2.26",
  "markitdown>=0.0.1",
]

[project.scripts]
ppa = "archive_cli.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1",
]
# Native extension: `cd archive_crate && maturin develop` then `pip install -e ".[rust]"` optional path:
rust = [
  "archive_crate @ file:./archive_crate",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Long SQL strings and log lines exceed 120; formatter does not wrap them.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Dotenv must load before local imports (repo-root on sys.path / env for adapters).
"archive_sync/handler.py" = ["E402"]
"archive_scripts/ppa-google-workspace-backfill.py" = ["E402"]
"archive_scripts/ppa-seed-runbook.py" = ["E402"]
"archive_scripts/phase3_step8_verification.py" = ["E402"]

[tool.setuptools.packages.find]
where = ["."]
include = ["archive_cli*", "archive_vault*", "archive_sync*", "archive_doctor*", "archive_auth*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["archive_tests"]
markers = [
    "integration: requires a running Postgres instance",
    "slow: long-running tests (>30 seconds)",
    "openai: requires OpenAI API key (skipped in CI)",
]
